bug fix. truncate long posts, paging ids at start of lines, newlines in pms

--- a/css/compact.css
+++ b/css/compact.css
@@ -2574,3 +2574,7 @@ footer{
   display: unset;
   border: unset;
 }
+
+.privatemessagetext{
+  white-space: pre-line;
+}
